--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,13 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<input type="text" [(ngModel)]="title">
-{{ title }}
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12">
+            <input type="text" [(ngModel)]="title">
+            {{ title }}
+            <hr>
+            <app-servers></app-servers>
+        </div>
+    </div>
+</div>
+
 
