created some components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
             <input type="text" [(ngModel)]="title">
             {{ title }}
             <hr>
-            <app-servers></app-servers>
+            <div class="app-servers"></div>
         </div>
     </div>
 </div>
