--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,8 @@
             {{ title }}
             <hr>
             <div class="app-servers"></div>
+            <div app-success-alert></div>
+            <div app-warning-alert></div>
         </div>
     </div>
 </div>
