directives in use

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,7 @@
             <div class="app-servers"></div>
             <div app-success-alert></div>
             <div app-warning-alert></div>
+            <div username></div>
         </div>
     </div>
 </div>
