--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,7 @@
             <div app-success-alert></div>
             <div app-warning-alert></div>
             <div username></div>
+            <app-visit-score></app-visit-score>
         </div>
     </div>
 </div>
